# agentic-wot

./: .gitignore  Cargo.toml  README.md  bitcoin.conf  docker-compose.ci.yml  docker-compose.phoenixd.yml  docker-compose.yml  justfile  package-lock.json  phoenixd.justfile
.github/workflows/: ci.yml
crates/bdk-agcli/: Cargo.toml
crates/bdk-agcli/src/: main.rs
crates/bdk-lib/: Cargo.toml
crates/bdk-lib/src/: config.rs  error.rs  lib.rs  wallet.rs
crates/bdk-lib/tests/: e2e.rs
crates/carpet-agent/: Cargo.toml
crates/carpet-agent/src/: main.rs
crates/carpet-ui/: Cargo.toml  Dioxus.toml
crates/carpet-ui/assets/: tailwind.css
crates/carpet-ui/src/: app.rs  main.rs  mock_data.rs  routes.rs  types.rs
crates/carpet-ui/src/components/: bounty_card.rs  layout.rs  list_card.rs  list_detail.rs  mod.rs  wallet_card.rs  zap_button.rs
crates/carpet-ui/src/state/: marketplace.rs  mod.rs  nostr.rs  wallet.rs
crates/dcosl-core/: Cargo.toml
crates/dcosl-core/src/: dtag.rs  error.rs  header.rs  item.rs  lib.rs  query.rs
crates/nostr-lib/: Cargo.toml
crates/nostr-lib/src/: error.rs  filters.rs  lib.rs  profile.rs  service.rs  types.rs  zap.rs
crates/phoenixd-agcli/: Cargo.toml
crates/phoenixd-agcli/src/: main.rs
crates/phoenixd-lib/: Cargo.toml
crates/phoenixd-lib/src/: client.rs  error.rs  lib.rs  types.rs
scripts/: scan_qr.py
