[workspace]
resolver = "2"
members = ["crates/*"]
# Exclude carpet-ui from default workspace checks — it needs platform-specific features
default-members = [
    "crates/bdk-lib",
    "crates/bdk-agcli",
    "crates/phoenixd-lib",
    "crates/phoenixd-agcli",
    "crates/carpet-agent",
    "crates/nostr-lib",
    "crates/dcosl-core",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
