[workspace]
resolver = "2"
members = ["crates/*"]
default-members = [
    "crates/phoenixd-lib",
    "crates/nostr-lib",
    "crates/dcosl-core",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
