[package]
name = "bdk-lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
bdk_wallet = { version = "2", features = ["file_store", "keys-bip39"] }
bdk_esplora = { version = "0.22", features = ["async-https", "tokio"] }
bip39 = { version = "2", features = ["rand"] }
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
