[package]
name = "carpet-agent"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "carpet-agent"
path = "src/main.rs"

[dependencies]
bdk-lib = { path = "../bdk-lib" }
phoenixd-lib = { path = "../phoenixd-lib" }
rig-core = { version = "0.31", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["rig-core", "tracing"]
