[package]
name = "carpet-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
nostr-lib = { path = "../nostr-lib" }
bdk-lib = { path = "../bdk-lib" }
phoenixd-lib = { path = "../phoenixd-lib" }
dcosl-core = { path = "../../../dcosl-core" }
dioxus = { version = "0.7", features = ["router"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Platform-specific (optional)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio"]
desktop = ["dioxus/desktop"]
