[package]
name = "carpet-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Backend crates — only needed on the server (they contain C deps that don't compile to wasm)
nostr-lib = { path = "../nostr-lib", optional = true }
bdk-lib = { path = "../bdk-lib", optional = true }
phoenixd-lib = { path = "../phoenixd-lib", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:nostr-lib", "dep:bdk-lib", "dep:phoenixd-lib"]
desktop = ["dioxus/desktop"]

[package.metadata.cargo-machete]
ignored = ["axum", "tokio", "nostr-lib", "bdk-lib", "phoenixd-lib", "serde", "serde_json"]
