[package]
name = "nostr-lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
dcosl-core = { path = "../dcosl-core" }
nostr-sdk = { version = "0.44", features = ["nip57"] }
phoenixd-lib = { path = "../phoenixd-lib" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tokio", "tracing"]
